--- a/sub/excercises.html
+++ b/sub/excercises.html
@@ -58,6 +58,7 @@
 <button class="excnav excnav-left ">next</button> -->
 
 </div>
+<div ><button type="button" id="next">next</button></div>
 
 </div> 
 
@@ -69,7 +70,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 
 
-<script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script>
+<!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script> -->
     
     <script src="../script/main.js"></script>
     <script src="../script/excercises.js"></script>
