--- a/sub/contact.html
+++ b/sub/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/dcf6lag.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-
+ 
 </head>
 <body  class="badi">
     
@@ -70,7 +70,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 
 
-<script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script>
+<!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script> -->
     
     <script src="../script/main.js"></script>
     <script src="../script/auth.js"></script>
