--- a/sub/contact.html
+++ b/sub/contact.html
@@ -20,7 +20,7 @@
         <i class="fas fa-phone-alt"></i>
         <i class="fas fa-sign-out-alt"></i> -->
         <header>
-            <h1 class="header-title">Blind Spot</h1>
+            <img src="/img/Asset 2.svg" class="logo">
             <div >
             <a class="hnav-point" href="https:index.hu">History</a>
             
@@ -48,18 +48,10 @@
 <!-- <hr class="hr1"> -->
 <hr class="hr2">
 <div class="small-content-container">
-    <p tabindex="1">Every kind of speach beacause it is written in english, bitch!
+    <p tabindex="1"> Test speach Every kind of speach
     </p>
 
-    <button  tabindex="1">really nothing</button>
-    <button  tabindex="1">Etherum</button>
-
-    <button class="test" id="zzen"  tabindex="2">button</button>
-
-    <button class="test" id="zene" tabindex="3">goat</button> 
-
-    <button class="test" id="ze" tabindex="3">small cat</button> 
-
+    <button onclick="firestoreUpload()">pushToFirestore</button>
 </div> 
 </div>
 
@@ -71,7 +63,7 @@
 
 
 <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script> -->
-    
+
     <script src="../script/main.js"></script>
     <script src="../script/auth.js"></script>
 </body>
