--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>oktatas</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/auth.css">
-    <link rel="shortcut icon" type="image/svg" href=""/>
+    <link rel="shortcut icon" type="image/svg" href="img/Asset 2.svg"/>
     <link rel="stylesheet" href="https://use.typekit.net/dcf6lag.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 <body>
           
         <header>
-            <h1 class="header-title">Blind Spot</h1>
+            <img src="/img/Asset 2.svg" class="logo">
             <div>
           
         </div>
