before php and contact

--- a/sub/contact.html
+++ b/sub/contact.html
@@ -22,7 +22,7 @@
         <header>
             <img src="/img/Asset 2.svg" class="logo">
             <div >
-            <a class="hnav-point" href="https:index.hu">History</a>
+            <a class="hnav-point">History</a>
             
             <a class="hnav-point" href="excercises.html">Excercises</a>
             <a class="hnav-point" href="excercises.html">contact</a>
