--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>oktatas</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/auth.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/auth.css">
     <link rel="shortcut icon" type="image/svg" href="img/Asset 2.svg"/>
     <link rel="stylesheet" href="https://use.typekit.net/dcf6lag.css">
 
