--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
 
 <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script>
     
-    <script src="../script/auth.js"></script>
+    <script src="script/auth.js"></script>
 </body>
 </html>
