--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
 <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script>
     
     <script src="script/auth.js"></script>
+    <script src="script/main.js"></script>
 </body>
 </html>
