--- a/sub/history.html
+++ b/sub/history.html
@@ -73,9 +73,9 @@
 <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script>
 
 
-<script src="../script/history.js"></script>
-<script src="../script/auth.js"></script>
-<script src="../script/main.js"></script>
+<script  type="text/javascript" src="../script/history.js"></script>
+<script  type="text/javascript" src="../script/auth.js"></script>
+<script  type="text/javascript" src="../script/main.js"></script>
     
     
 </body>
