--- a/sub/contact.html
+++ b/sub/contact.html
@@ -46,6 +46,7 @@
   
 <h1 class="title">CONTACT</h1>
 <div class="exc-container">
+
 <h2>Write me a message</h2>
 <hr class="hr2">
 <form class="msg-form">
@@ -60,7 +61,23 @@
 <img class="vd-call-icon" src="/img/Icon%20material-account-circle.svg">
 <h1 class="name-tag">Molnár Veronika</h1>
 <button class="btn ah" >Make a call</button>
-
+<h2>Infromation</h2>
+<hr class="hr2">
+<table class="tbl-info">
+    <tr>
+        <td><i class="fas nofas fa-phone-alt"></i></td>
+        <td><a  href = "tel: +36205334023">+36 20 533 4023</a></td>
+    </tr>
+     <tr>
+        <td><i class="fas nofas fa-school"></i></td>
+        <td>Orosháza, Tass u. 15, 5900</td>
+    </tr> 
+    <tr>
+        <td><i class="nofas fas fa-mail-bulk"></i></td>
+        <td><a href = "mailto: kergeres@gmail.com">ninglor@gmail.com</a></td>
+    </tr> 
+  
+</table>
 </div></div>
 </div>
 </main>
