--- a/sub/history.html
+++ b/sub/history.html
@@ -41,6 +41,7 @@
   
         </div>
         <main>
+            
 <div class="content-container badi">
 <h1 class="title">History</h1>
 <div class="exc-container">
@@ -58,16 +59,18 @@
 
 
 </div> 
-
-
+<div id="loader">
+    <div class="spinner"></div>
+  
 </main>
+
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 
 
-<!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script> -->
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=rAskuAab"></script>
 
 
 <script src="../script/history.js"></script>
