some css for tables

--- a/sub/contact.html
+++ b/sub/contact.html
@@ -48,15 +48,15 @@
                <table class="tbl-info">
                   <tr>
                      <td><i class="fas nofas fa-phone-alt"></i></td>
-                     <td><a  href = "tel: +36205334023">+36 20 533 4023</a></td>
+                     <td><a onfocus="sayLoudly('phone: +36 20 533 4023')"  href = "tel: +36205334023">+36 20 533 4023</a></td>
                   </tr>
                   <tr>
                      <td><i class="fas nofas fa-school"></i></td>
-                     <td>Orosháza, Tass u. 15, 5900</td>
+                     <td><a onfocus="sayLoudly('address: Orosháza, Tass utca 15, 5900')" href="#">Orosháza, Tass u. 15, 5900</a></td>
                   </tr>
                   <tr>
                      <td><i class="nofas fas fa-mail-bulk"></i></td>
-                     <td><a href = "mailto: kergeres@gmail.com">ninglor@gmail.com</a></td>
+                     <td><a onfocus="sayLoudly('email: ninglor@gmail.com')" href = "mailto: kergeres@gmail.com">ninglor@gmail.com</a></td>
                   </tr>
                </table>
             </div>
