+ task in the table

--- a/sub/history.html
+++ b/sub/history.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="../css/main.css">
       <link rel="stylesheet" href="../css/excercies.css">
       <link rel="shortcut icon" type="image/svg" href="../img/icons/SVG/bright logo without text.svg"/>
-      <link rel="stylesheet" href="https://use.typekit.net/dcf6lag.css">
+      <link rel="stylesheet" href="https://use.typekit.net/qrz7jlg.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
    </head>
    <body class="badi">
