--- a/sub/contact.html
+++ b/sub/contact.html
@@ -16,10 +16,10 @@
       <header>
          <img src="../img/Asset 2.svg" class="logo">
          <div >
-            <a tabindex="-1" class="hnav-point"  href="history.html"><i class="fas fa-history"></i><span tabindex="0">History</span></a>
-            <a tabindex="-1" class="hnav-point" href="excercises.html"><i class="fas fa-book"></i><span tabindex="0">Excercises</span></a>
-            <a tabindex="-1" class="hnav-point" href="contact.html"><i  class="fas fa-phone-alt"></i><span tabindex="0">Contact</span></a>
-            <a tabindex="-1" onclick="logout()" id="logout" class="hnav-point"><i class="fas fa-sign-out-alt"></i><span tabindex="0">log out</span></a>
+            <a tabindex="0" class="hnav-point" href="history.html"><i class="fas fa-history"></i>History</a>
+            <a tabindex="0" class="hnav-point" href="excercises.html"><i class="fas fa-book"></i></i>Excercises</a>
+            <a tabindex="0" class="hnav-point" href="contact.html"><i class="fas fa-phone-alt"></i>Contact</a>
+            <a tabindex="0" onclick="logout()" id="logout" class="hnav-point"><i class="fas fa-sign-out-alt"></i>log out</a>
          </div>
       </header>
       <div class="ham-cont" onclick="hamburgerNav()">
