--- a/sub/history.html
+++ b/sub/history.html
@@ -3,39 +3,35 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <meta name="author" content="David Papp">
+      <meta name="robots" content="noindex"/>
       <title>Talking Bots | History</title>
+      <meta name="description" content="Talking Bots history. Here you can see the results of the finished Exercises"/>
       <link rel="stylesheet" href="../css/main.css">
       <link rel="stylesheet" href="../css/excercies.css">
-      <link rel="shortcut icon" type="image/svg" href="../img/icons/SVG/bright logo without text.svg"/>
+      <link rel="shortcut icon" type="image/svg" href="../img/icons/SVG/bright_logo_without_text.svg"/>
       <link rel="stylesheet" href="https://use.typekit.net/qrz7jlg.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
    </head>
    <body class="badi">
       <header>
-         <img src="../img/Asset 2.svg" class="logo">
+         <img alt="Talking Bots Logo" src="../img/icons/SVG/dark_logo_with_text.svg" class="logo">
          <div >
             <a tabindex="0" class="hnav-point" href="history.html"><i class="fas fa-history"></i>History</a>
-            <a tabindex="0" class="hnav-point" href="excercises.html"><i class="fas fa-book"></i></i>Excercises</a>
+            <a tabindex="0" class="hnav-point" href="excercises.html"><i class="fas fa-book"></i>Exercises</a>
             <a tabindex="0" class="hnav-point" href="contact.html"><i class="fas fa-phone-alt"></i>Contact</a>
             <a tabindex="0" onclick="logout()" id="logout" class="hnav-point"><i class="fas fa-sign-out-alt"></i>log out</a>
          </div>
       </header>
-      <div class="ham-cont" onclick="hamburgerNav()">
-         <label for="mobileicon" class="ham-menu-lineb"></label>
-         <label for="mobileicon" class="ham-menu-line"></label>
-         <label for="mobileicon" class="ham-menu-linea"></label>
-      </div>
       <main>
          <div class="content-container badi">
             <h1 class="title">History</h1>
             <div class="exc-container">
-           
             </div>
          </div>
          <div id="loader">
-         <div class="spinner"></div>
+             <div class="spinner"></div>
+         </div>
       </main>
       <!-- The core Firebase JS SDK  -->
       <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
