--- a/sub/contact.html
+++ b/sub/contact.html
@@ -36,7 +36,7 @@
                </form>
                <h2>Make a video call</h2>
                <hr class="hr2">
-               <img alt="profile icon" class="vd-call-icon" src="../img/Icon%20material-account-circle.svg">
+               <img alt="profile icon" class="vd-call-icon" src="../img/Veronika.svg">
                <h1 class="name-tag">Molnár Veronika</h1>
                <button tabindex="1" class="btn ah" >Make a call</button>
                <h2>Infromation</h2>
